# huji-cs-operating-systems

./: .gitignore  README.md
Ex2/: README  makefile
Ex2/ex2-uthreads/ex2-uthreads/: CMakeLists.txt  main.cpp  thread.cpp  thread.h  uthread_manager.cpp  uthread_manager.h  uthreads.cpp  uthreads.h
ex1/: Makefile  README  plot_example.py
ex1/ex1-measure/: CMakeLists.txt
ex1/ex1-measure/ex1-measure/: CMakeLists.txt  measure.cpp  memory_latency.cpp
ex2/ex2-uthreads/: CMakeLists.txt
ex2/ex2-uthreads/ex2-uthreads/: uthread_manager.cpp
ex3/: Makefile  README
ex3/ex3-mapreduce/: CMakeLists.txt
ex3/ex3-mapreduce/ex3-mapreduce/: Barrier.cpp  Barrier.h  CMakeLists.txt  CSemaphore.cpp  CSemaphore.h  Common.h  Job.cpp  Job.h  JobContext.cpp  JobContext.h  MapReduceFramework.cpp  Mutex.cpp  Mutex.h  SampleClient.cpp  Semaphore.cpp  Semaphore.h  Thread.cpp  Thread.h  ex3-mapreduce.cpp
ex4/: Makefile  README
ex4/ex4-vmem/: CMakeLists.txt
ex4/ex4-vmem/ex4-vmem/: CMakeLists.txt  SimpleTest.cpp  Utils.h  VirtualMemory.cpp  VirtualMemory.h
temp/: makefile
